2000-05-20  Jacob Berkman  <jacob@helixcode.com>

	* gnome-terminal.c (main): ignore SIGHUP.  This fixes bug #11322

2000-05-12  Dan Winship  <danw@helixcode.com>

	* Makefile.am (corba.o): Fix my previous commit. It's corba.o, not
	corba.c that depends on Terminal.h.

2000-05-11  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-terminal.c (load_session): Removed unused variable.
	(preferences_cmd): Clustered options in a 2x3 table, rather than
	the list of options we had.

	(preferences_cmd): Make padding less intensive
	in the terminal preferences dialog box.

2000-05-11  Dan Winship  <danw@helixcode.com>

	* Makefile.am: Note that corba.c depends on Terminal.h so it will
	be built first.

2000-05-05  Hans Petter Jansson  <hpj@helixcode.com>

	* gnome-terminal.c (gnome_term_set_font): Added use_bold option.
	Added checkbox enabling bold text, on by default.

2000-05-03  Michael Meeks  <michael@helixcode.com>

	* gnome-terminal.c (load_config): s/strcasecmp/g_strcasecmp/

2000-05-03  Nakai Yukihiro <nakai@gnome.gr.jp>

	* gnome-terminal.desktop: Updated Japanese translation.

2000-04-14  Fatih Demir	<kabalak@gmx.net>

	* gnome-terminal.desktop : Added [tr] ..

2000-04-03  Jacob Berkman  <jacob@helixcode.com>

	* */Makefile.am: use new template makefile

2000-04-03 Alastair McKinstry <mckinstry@computer.org>

	* gnome-terminal.desktop: Added Irish (gaelic) translation.

2000-04-03  Martin Baulig  <martin@home-of-linux.org>

	* de/: added german translation of the Gnome Terminal
	User's Guide.

2000-03-27  Jacob Berkman  <jacob@helixcode.com>

	* C/gnome-terminal.sgml: fix typo

	* gnome-terminal.c (preferences_cmd): fix the help stuff yet again

2000-03-19  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-terminal.c (preferences_cmd): Change the help for the
	properties dialog box to point to the correct file.

2000-03-22  Alexander Kirillov  <kirillov@math.sunysb.edu>

	* C/gnome-terminal.sgml: fixed "extended selection" description. 
