@@ -21,7 +21,8 @@ LDADD = \
 
 bin_PROGRAMS = gnome-terminal
 
-EXTRA_DIST = gnome-terminal.desktop gnome-terminal.gnorba
+EXTRA_DIST = gnome-terminal.desktop gnome-terminal.gnorba \
+             gnome-terminal-logo.jpg
 
 CORBA_GENERATED =		\
 	Terminal.h		\
@@ -50,3 +51,6 @@ gnorba_DATA = gnome-terminal.gnorba
 
 utildir = $(datadir)/gnome/apps/System
 util_DATA = gnome-terminal.desktop
+
+pixmapsdir = $(datadir)/pixmaps
+util_DATA = gnome-terminal-logo.jpg
